still working on getting this to save the file to the correct folder.

--- a/encyclopedia/templates/encyclopedia/apology.html
+++ b/encyclopedia/templates/encyclopedia/apology.html
@@ -6,5 +6,5 @@
 
 {% block body %}
     <h1>File not found</h1>
-    <p>{{entry_name.capitalize}} is not a valid entry. Please try again.</p>
+    <p>{{entry_nam.capitalize}} is not a valid entry. Please try again.</p>
 {% endblock %}
