meant to do this on a branch for edit entry but did it on main. committing here then will push.

--- a/encyclopedia/templates/encyclopedia/full_entry.html
+++ b/encyclopedia/templates/encyclopedia/full_entry.html
@@ -1,11 +1,20 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    {{ entry_name }}
+{{ entry_name }}
 {% endblock %}
 
 {% block body %}
 
-            {{ entry }}
+{{ entry }}
 
-{% endblock %}
+<br /><br />
+
+<form action="{% url 'edit_entry' %}" method="post">
+    {% csrf_token %}
+    <input type="hidden" name="full_entry_form" value="{{ entry }}">
+    <input type="hidden" name="entry_name" value="{{ entry_name }}">
+    <button>edit entry</button>
+</form>
+
+ {% endblock %}
