--- a/encyclopedia/templates/encyclopedia/apology.html
+++ b/encyclopedia/templates/encyclopedia/apology.html
@@ -1,10 +1,10 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    No {{entry_name.capitalize}}
+    No {{entry.capitalize}}
 {% endblock %}
 
 {% block body %}
     <h1>File not found</h1>
-    <p>{{entry_nam.capitalize}} is not a valid entry. Please try again.</p>
+    <p>{{entry.capitalize}} is not a valid entry. Please try again.</p>
 {% endblock %}
