--- a/encyclopedia/templates/encyclopedia/edit_entry.html
+++ b/encyclopedia/templates/encyclopedia/edit_entry.html
@@ -1,17 +1,17 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-{{ entry_name }}
+Edit {{ title }}
 {% endblock %}
 
 {% block body %}
 
-Please edit the entry for {{ title }}
+<h3>Please edit the entry for {{ title }}</h3>
 
 <br /><br />
 <form action="{% url 'edit_entry' %}" method="post">
     {%csrf_token%}
-    {{form}}
+    {{form.as_p}}
     <input type="submit" name="submit">
 </form>
 
