--- a/encyclopedia/templates/encyclopedia/new_entry.html
+++ b/encyclopedia/templates/encyclopedia/new_entry.html
@@ -5,11 +5,13 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Create a new entry!</h1>
-    
+<h3>Create a new entry!</h3>
+
+<br /><br / >
+
 <form action="{% url 'new_entry' %}" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <input type="submit" value="submit">
 </form>
 
